syntax = "proto3";
package bigsciencequiz;

import "gamestate.proto";
import "appstate.proto";
import "user.proto";
import "admin_rpc.proto";
import "bigscreen_rpc.proto";

option java_package = "club.eslcc.bigsciencequiz.proto";

message Empty {}

message IdentifyUserRequest {
    string deviceId = 1;
}

message IdentifyUserResponse {
    enum FailureReason {
        NONE = 0;
        DO_NOT_EVER_USE_ME = 1;
        NO_FREE_TEAMS = 2;
    }
    FailureReason failureReason = 1;
    Team team = 2;
    string sentryDsn = 3;
}

message TeamReadyRequest {
    string teamName = 1;
}

message TeamReadyResponse {
    enum FailureReason {
        NONE = 0;
        ALREADY_REGISTERED = 1;
        TEAM_NAME_TAKEN = 2;
    }
    FailureReason failureReason = 1;
    Team team = 2;
}

message GetGameStateRequest {
}

message GetGameStateResponse {
    GameState gameState = 1;
}

message GetAppStateRequest {
}

message GetAppStateResponse {
    AppState appState = 1;
}

message AutocompleteMemberNameRequest {
    string partialName = 1;
}

message AutocompleteMemberNameResponse {
    repeated string names = 1;
}

message AnswerQuestionRequest {
    int32 answerId = 1;
}

message AnswerQuestionResponse {
    enum FailureReason {
        NONE = 0;
        NOT_IDENTIFIED = 1;
        OUT_OF_RANGE = 2;
        INVALID_STATE = 3;
        ALREADY_ANSWERED = 4;
    }
    FailureReason failureReason = 1;
}

message UnknownRequestResponse {
    string request = 1;
}

message UnauthorisedRequestResponse {
    string reason = 1;
}

message GenericErrorResponse {
    string message = 1;
}

message RpcRequest {
    oneof request {
        IdentifyUserRequest identifyUserRequest = 1;
        TeamReadyRequest teamReadyRequest = 2;
        GetGameStateRequest getGameStateRequest = 3;
        GetAppStateRequest getAppStateRequest = 4;
        AutocompleteMemberNameRequest autocompleteMemberNameRequest = 5;
        AnswerQuestionRequest answerQuestionRequest = 6;
        bigsciencequiz.admin.AdminGetQuestionsRequest adminGetQuestionsRequest = 101;
        bigsciencequiz.admin.AdminSetActiveQuestionRequest adminSetActiveQuestionRequest = 102;
        bigsciencequiz.admin.AdminResetStateRequest adminResetStateRequest = 103;
        bigsciencequiz.admin.AdminSetGameStateRequest adminSetGameStateRequest = 104;
        bigsciencequiz.admin.AdminShutdownDeviceRequest adminShutdownDeviceRequest = 105;
        bigsciencequiz.bigscreen.BigscreenGetTeamsRequest bigscreenGetTeamsRequest = 201;
    }
}

message RpcResponse {
    oneof response {
        IdentifyUserResponse identifyUserResponse = 1;
        TeamReadyResponse teamReadyResponse = 2;
        GetGameStateResponse getGameStateResponse = 3;
        GetAppStateResponse getAppStateResponse = 4;
        AutocompleteMemberNameResponse autocompleteMemberNameResponse = 5;
        AnswerQuestionResponse answerQuestionResponse = 6;
        bigsciencequiz.admin.AdminGetQuestionsResponse adminGetQuestionsResponse = 101;
        bigsciencequiz.admin.AdminSetActiveQuestionResponse adminSetActiveQuestionResponse = 102;
        bigsciencequiz.admin.AdminResetStateResponse adminResetStateResponse = 103;
        bigsciencequiz.admin.AdminSetGameStateResponse adminSetGameStateResponse = 104;
        bigsciencequiz.admin.AdminShutdownDeviceResponse adminShutdownDeviceResponse = 105;
        bigsciencequiz.bigscreen.BigscreenGetTeamsResponse bigscreenGetTeamsResponse = 201;
        GenericErrorResponse genericErrorResponse = 997;
        UnauthorisedRequestResponse unauthorisedRequestResponse = 998;
        UnknownRequestResponse unknownRequestResponse = 999;
    }
}
